# hypervault-mcp

./: .gitignore  .mcp.json  README.md  greywall.json  pyproject.toml
api/: index.py
src/hypervault_mcp/: __init__.py  server.py
tests/: conftest.py  test_auth.py  test_client_request.py  test_extract_source_prompt.py  test_helpers.py  test_http_integration.py  test_resource_and_cli.py  test_tools.py
