[project]
name = "hypervault-mcp"
version = "0.2.0"
description = "HyperVault MCP server — let agents save artifacts, claim vanity domains, and use the user's private memory wiki."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
hypervault-mcp = "hypervault_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypervault_mcp"]
